fixed portfolio page buttons color contrast

--- a/assets/css/pages/work.css
+++ b/assets/css/pages/work.css
@@ -1,8 +1,3 @@
-:root {
-  --button-bg-active: #307b6c;
-  --button-bg: #45b29d;
-}
-
 div[role="group"] {
   display: flex;
   flex-direction: row;
@@ -10,16 +5,37 @@ div[role="group"] {
   align-items: baseline;
   gap: 1rem;
   margin-bottom: 3rem;
+
+  /* colors for project filter buttons */
+  --button-bg: var(--color-turquoise);
+  --button-bg-active: var(--color-turquoise-dark);
+  --button-text-color: var(--color-white);
+  --button-text-color-active: var(--color-white);
 }
 
-div[role="group"] button {
+@media (prefers-color-scheme: dark) {
+  div[role="group"] {
+    --button-bg-active:var(--color-turquoise);
+    --button-bg: var(--color-turquoise-light);
+    --button-text-color: var(--color-gray-90);
+    --button-text-color-active: var(--color-white);
+  }
+}
+
+.project-filters button.button {
   text-transform: capitalize;
   letter-spacing: 0.1rem;
-  color: var(--text-color);
+  color: var(--button-text-color);
   background-color: var(--button-bg);
 }
 
-div[role="group"] button[aria-pressed="true"] {
-  color: #fff;
+.project-filters button.button:hover {
+  color: var(--button-bg);
+  background-color: var(--background-color);
+  border-color: var(--button-bg);
+}
+
+.project-filters button[aria-pressed="true"].button {
+  color: var(--button-text-color-active);
   background-color: var(--button-bg-active);
 }
